# zenoblend

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  blender.py  build.py  config.py  dist.py  full_config.py  linux_dist.py  run.py  run.sh  todo.txt
YourProject/: CMakeLists.txt  CustomNumber.cpp  MyPrimitiveOps.cpp
graphs/: CustomNumber.zsg  MyPrimitiveOps.zsg
include/blender/blenlib/: BLI_float3.hh
pyzenoblend/: CMakeLists.txt  main.cpp
scripts/: blender_icon.py  linux_dist.py  linux_dist_helper.py  linux_link.py  release.py  windows_dist_helper.py
zenoblend/: BlenderMesh.h  CMakeLists.txt  __init__.py  blender.h  blender_io.py  conv.cpp  dll.py  embed_system.py  execute_operator.py  frame_animation.py  gpu_drawer.py  io.cpp  io_import_mesh.py  main.cpp  mesh_ops.py  node_system.py  polywire_shaders.py  scenario.py  tree_dumper.py  viewer.cpp
